@@ -1,2 +1,4 @@
 debian/tmp/usr/lib/linuxsampler/lib*.so.* usr/lib/linuxsampler
 debian/tmp/usr/lib/linuxsampler/plugins usr/lib/linuxsampler
+debian/tmp/usr/lib/dssi/* usr/lib/dssi
+debian/tmp/usr/lib/lv2/linuxsampler* usr/lib/lv2
